<resources>
    <string name="app_name">"Castlevania "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_juego">Juego</string>

    <string name="iniciar">Iniciar Juego</string>
    <string name="estadistica">Estadisticas</string>
    <string name="salir">Salir</string>
    <string name="usuario">Usuario</string>
    <string name="nivel">Nivel: </string>
    <string name="juego">Castlevania 2D</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="title_activity_activity_niveles">Niveles del juego</string>

    <string name="nivel1">Nivel 1</string>
    <string name="nivel2">Nivel 2</string>
    <string name="nivel3">Nivel 3</string>

    <string name="title_activity_juego2">Juego2</string>
    <string name="title_activity_juego3">Juego3</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_presentacion">PresentacionActivity</string>
    <string name="title_activity_usuario">UsuarioActivity</string>

</resources>
