<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/inicio"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:textColor="#fffffdfd"

        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />





    <Button
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:id="@+id/button3"
        android:onClick="Enviar"


        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agregar Usuario"
        android:id="@+id/button"
        android:onClick="AgregarUsuario"
        style="@android:style/ButtonBar"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadistica"
        android:id="@+id/button2"
        android:onClick="Estadisticas"

        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />
    <Button
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:id="@+id/button4"
        android:onClick="Salir"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />



</RelativeLayout>
