<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo_es"
    tools:context="com.example.oscar.castlevania.Estadisticas">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textView2"
        android:textColor="#fffcfff6"
        android:elegantTextHeight="false"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/viewImage1"
        android:layout_alignStart="@+id/viewImage1"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <ImageView
        android:id="@+id/viewImage1"
        android:layout_width="185dp"
        android:layout_height="120dp"
        android:src="@drawable/usuario"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel1"
        android:id="@+id/textView3"
        android:textColor="#fffcfff6"
        android:textSize="24dp"
        android:layout_alignTop="@+id/viewImage1"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel2"
        android:id="@+id/textView4"
        android:textColor="#fffcfff6"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/viewImage1"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel3"
        android:id="@+id/textView5"
        android:textColor="#fffcfff6"
        android:textSize="24dp"
        android:layout_below="@+id/viewImage1"
        android:layout_toLeftOf="@+id/viewImage1"
        android:layout_toStartOf="@+id/viewImage1"
        android:layout_marginTop="49dp" />

</RelativeLayout>