<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoniveles"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.oscar.castlevania.ActivityNiveles">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel1"
        android:id="@+id/nivel1"
        android:onClick="enviarnivel1"
        style="@android:style/ButtonBar"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/nivel3"
        android:layout_alignStart="@+id/nivel3"
        android:layout_marginTop="64dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel2"
        android:id="@+id/nivel2"
        android:onClick="enviarnivel2"
        style="@android:style/ButtonBar"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/nivel3"
        android:layout_alignStart="@+id/nivel3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel3"
        android:id="@+id/nivel3"
        android:onClick="enviarnivel3"
        style="@android:style/ButtonBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp" />
</RelativeLayout>
